# python-clean-arch-ddd

./: .gitignore  .pylintrc  Dockerfile  Makefile  api.http  docker-compose.override.yaml  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.docker/: entrypoint.sh
.docker/powerlevel10k/: .p10k.zsh
src/__core/: pyproject.toml
src/__core/core/__core__/: other.py
src/__core/core/__seedwork/application/: dto.py  use_cases.py
src/__core/core/__seedwork/domain/: __init__.py  entities.py  exceptions.py  repositories.py  validators.py  value_objects.py
src/__core/core/__seedwork/tests/integration/: test_integration_validations.py
src/__core/core/__seedwork/tests/unit/application/: test_unit_dto.py
src/__core/core/__seedwork/tests/unit/domain/: test_unit_entities.py  test_unit_repositories.py  test_unit_validations.py  test_unit_value_objects.py
src/__core/core/category/application/: __init__.py  dto.py  use_cases.py
src/__core/core/category/domain/: __init__.py  entities.py  repositories.py  validations.py
src/__core/core/category/infra/db/: __init__.py
src/__core/core/category/infra/db/django_orm/: __init__.py  category_django_orm.py
src/__core/core/category/infra/db/in_memory/: __init__.py  repositories.py
src/__core/core/category/tests/integration/domain/: test_int_entities.py
src/__core/core/category/tests/integration/infra/db/django_orm/: test_int_category_django_orm.py
src/__core/core/category/tests/unit/application/: test_dto.py  test_unit_use_cases.py
src/__core/core/category/tests/unit/domain/: test_unit_entities.py  test_unit_validations.py
src/__core/core/category/tests/unit/infra/: test_unit_repositories.py
src/__core__/: other.py
src/__seedwork/: exceptions.py
src/__seedwork/application/: dto.py
src/__seedwork/domain/: entities.py  exceptions.py  repositories.py  validations.py  validators.py  value_objects.py
src/__seedwork/tests/integration/: test_integration_validations.py
src/__seedwork/tests/unit/application/: test_unit_dto.py
src/__seedwork/tests/unit/domain/: test_unit_entities.py  test_unit_repositories.py  test_unit_validations.py  test_unit_value_objects.py
src/category/application/: dto.py  use_cases.py
src/category/domain/: entities.py  repositories.py  validations.py  validators.py
src/category/infra/: repositories.py
src/category/tests/integration/domain/: test_int_entities.py
src/category/tests/unit/application/: test_dto.py  test_unit_use_cases.py
src/category/tests/unit/domain/: test_unit_entities.py  test_unit_validations.py  test_unit_validators.py
src/category/tests/unit/infra/: test_unit_repositories.py
src/django_app/: pyproject.toml
src/django_app/category/: api.py  apps.py  urls.py
src/django_app/category/tests/unit/: test_unit_api.py
src/django_app/django_app/: __init__.py  container.py  settings.py  urls.py
