[project]
name = ""
version = ""
description = ""
authors = [
    {name = "", email = ""},
]
dependencies = [
    "autopep8>=1.6.0",
    "pylint>=2.12.2",
    "flake8>=4.0.1",
    "pydantic>=1.9.0",
    "pytest>=7.0.1",
    "Ipython>=8.1.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]

[tool.pdm.scripts]
test = "python -m unittest"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
