[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Luiz Carlos", email = "argentinaluiz@gmail.com"},
]
dependencies = [
    "pytest>=7.1.2",
    "-e file:///${PROJECT_ROOT}/src/django_app#egg=django_app",
    "-e file:///${PROJECT_ROOT}/src/__core#egg=core",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm]

[tool.pdm.scripts]
#runserver = "cd src/django_app"
runserver = "python ./src/django_app/manage.py runserver 0.0.0.0:8000"
#runserver = "sh -c 'cd src/django_app && pdm run runserver'"

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
