[project]
name = "djangoapp"
version = "0.0.1"
description = ""
authors = [
    {name = "Luiz Carlos", email = "argentinaluiz@gmail.com"},
]
dependencies = [
    "django>=4.0.4",
    "-e file:///home/python/app/src/__core#egg=core",
    "dependency-injector>=4.39.1",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[project.urls]
Homepage = ""
[tool.pdm]

[tool.pdm.scripts]
#runserver = "cd src/django_app"
runserver = "pdm run python manage.py runserver 0.0.0.0:8000"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
